--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
     const github = "https://api.github.com/repos/";
     const repository = "infoculture/datatasks";
     const issues = "/issues";
-    const token = '?personal_token=a6c609a367bb7c6bacc15243a0ce7c05c5039731';
+    const token = '?client_id=9bc47ce59a7d1c0db742&client_secret=5edea73f750c6a3f898d1a4d692d66faf523951c';
 
     var app = new Vue({
       el: '#app',
