--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
             <!-- <h1>{{message}}</h1> -->
             <p class="result-text">
               <a :href="url" target="_blank" v-if="title" class="link"><strong>{{ title }}</strong></a>
+              <span target="_blank" v-else>Нет ответа от API</span>
             </p>
           </div>
           <div class="col-12 text-center">
@@ -58,15 +59,16 @@
         <div class="modal-dialog" role="document">
           <div class="modal-content">
             <div class="modal-header">
-              <h5 class="modal-title" id="modalLabel">{{ repData.name }}</h5>
+              <h5 class="modal-title" id="modalLabel" v-if="repData.name">{{ repData.name }}</h5>
+              <h5 class="modal-title" id="modalLabel" v-else>Нет ответа от API</h5>
               <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                 <span aria-hidden="true">&times;</span>
               </button>
             </div>
-            <div class="modal-body">
+            <div v-if="repData.description" class="modal-body">
               <p>{{ repData.description }}</p>
-              <p>
-                <a :href="repData.html_url" target="_blank"  class="btn btn-secondary btn-dark"><i class="fab fa-github pr-2"></i> Репозиторий на GitHub</a>
+              <p v-if="repData.html_url" >
+                <a :href="repData.html_url"target="_blank" class="btn btn-secondary btn-dark"><i class="fab fa-github pr-2"></i> Репозиторий на GitHub</a>
               </p>
             </div>
           </div>
